# airfly

./: .coveragerc  AIRFLOW_PROVIDERS  LICENSE  Makefile  README.md  pyproject.toml  tasks.py
.github/workflows/: airfly-run-unittests.yml
examples/: README.md  dag.py  demo.py  params.py  tutorial.py
examples/bash_operator/: README.md  dag.py  params.py  workflow.py
examples/complex/: README.md  catalog.py  dag.py  entry.py  params.py  tag.py
examples/python_operator/: README.md  dag.py  params.py  workflow.py
examples/tutorial/: demo.py  demo2.py  my_task_model.py  params.py
src/airfly/: __init__.py  _ast.py  _meta.py  task.py  utils.py
src/airfly/_dev/: utils.py
src/airfly/_vendor/: __init__.py  abc.py  typing.py
src/airfly/_vendor/airflow/contrib/operators/: adls_to_gcs.py  awsbatch_operator.py  bigquery_operator.py  bigquery_table_delete_operator.py  bigquery_to_gcs.py  cassandra_to_gcs.py  dataflow_operator.py  dataproc_operator.py  datastore_export_operator.py  datastore_import_operator.py  file_to_gcs.py  gcp_bigtable_operator.py  gcp_compute_operator.py  gcp_container_operator.py  gcp_dlp_operator.py  gcp_function_operator.py  gcp_natural_language_operator.py  gcp_spanner_operator.py  gcp_speech_to_text_operator.py  gcp_sql_operator.py  gcp_text_to_speech_operator.py  gcp_transfer_operator.py  gcp_translate_speech_operator.py  gcp_vision_operator.py  gcs_acl_operator.py  gcs_delete_operator.py  gcs_download_operator.py  gcs_list_operator.py  gcs_operator.py  gcs_to_bq.py  gcs_to_gcs.py  gcs_to_s3.py  mlengine_operator.py  mssql_to_gcs.py  mysql_to_gcs.py  oracle_to_oracle_transfer.py  postgres_to_gcs_operator.py  pubsub_operator.py  sql_to_gcs.py  vertica_to_hive.py  (+1 more)
src/airfly/_vendor/airflow/contrib/sensors/: bigquery_sensor.py  gcp_transfer_sensor.py  gcs_sensor.py  hdfs_sensor.py
src/airfly/_vendor/airflow/decorators/: base.py  bash.py  branch_external_python.py  branch_python.py  branch_virtualenv.py  external_python.py  python.py  python_virtualenv.py  sensor.py  short_circuit.py
src/airfly/_vendor/airflow/example_dags/: example_dag_decorator.py  example_dynamic_task_mapping_with_no_taskflow_operators.py  example_skip_dag.py
src/airfly/_vendor/airflow/models/: abstractoperator.py  base.py  baseoperator.py  skipmixin.py  taskmixin.py
src/airfly/_vendor/airflow/operators/: bash.py  branch.py  check_operator.py  datetime.py  dummy.py  email.py  empty.py  generic_transfer.py  google_api_to_s3_transfer.py  hive_to_druid.py  hive_to_mysql.py  latest_only.py  mssql_to_hive.py  mysql_to_hive.py  presto_check_operator.py  presto_to_mysql.py  python.py  redshift_to_s3_operator.py  s3_to_hive_operator.py  s3_to_redshift_operator.py  smooth.py  sql.py  sql_branch_operator.py  subdag.py  trigger_dagrun.py  weekday.py
src/airfly/_vendor/airflow/providers/airbyte/operators/: airbyte.py
src/airfly/_vendor/airflow/providers/airbyte/sensors/: airbyte.py
src/airfly/_vendor/airflow/providers/arangodb/operators/: arangodb.py
src/airfly/_vendor/airflow/providers/arangodb/sensors/: arangodb.py
src/airfly/_vendor/airflow/providers/asana/operators/: asana_tasks.py
src/airfly/_vendor/airflow/providers/celery/sensors/: celery_queue.py
src/airfly/_vendor/airflow/providers/cohere/operators/: embedding.py
src/airfly/_vendor/airflow/sensors/: base.py  bash.py  date_time.py  external_task.py  filesystem.py  python.py  smart_sensor.py  sql.py  time_delta.py  time_sensor.py  weekday.py
src/airfly/_vendor/airflow/serialization/: serialized_objects.py
src/airfly/_vendor/airflow/template/: templater.py
src/airfly/_vendor/airflow/utils/log/: logging_mixin.py
src/airfly/cli/: main.py  utils.py
src/airfly/model/: __init__.py  airflow.py  base.py  task.py  v1.py
src/airfly/workflow/: _airflow.py  base.py  template.py
tests/_gutt/airfly/: test__ast.py  test_task.py  test_utils.py
tests/_gutt/airfly/__dev/: test_utils.py
tests/_gutt/airfly/_dev/: test_utils.py
tests/_gutt/airfly/cli/: test_main.py  test_utils.py
tests/_gutt/airfly/fab/: test_a.py
tests/_gutt/airfly/fab/sub/: test_c.py
tests/_gutt/airfly/lab/mod2/: test_a.py
tests/_gutt/airfly/model/: test_airflow.py  test_base.py  test_v1.py
tests/_gutt/airfly/workflow/: test__airflow.py  test_base.py  test_template.py
(+386 files in other folders)
