[tool.poetry]
name = "airfly"
version = "0.7.2"
description = "Auto generate Airflow's dag.py on the fly"
authors = ["ryanchao2012 <ryanchao2012@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ryanchao2012/airfly"

[tool.poetry.dependencies]
python = "^3.7"
asttrs = "^0.7.0"
attrs = "*"
black = "*"
click = "*"
networkx = "*"
isort = "*"
regex = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
ipython = "^7.25.0"
jedi = "<0.18"
invoke = "^1.6.0"
pytest-cov = "^2.12.1"
gutt = "^0.10.0"
# apache-airflow = {extras = ["airbyte", "amazon", "apache.beam", "apache.cassandra", "apache.druid", "apache.hdfs", "apache.hive", "apache.kylin", "apache.livy", "apache.pig", "apache.pinot", "apache.spark", "apache.sqoop", "asana", "celery", "cloudant", "cncf.kubernetes", "databricks", "datadog", "dingding", "discord", "docker", "elasticsearch", "exasol", "facebook", "ftp", "google", "grpc", "hashicorp", "http", "imap", "jdbc", "jenkins", "jira", "microsoft.azure", "microsoft.mssql", "microsoft.winrm", "mongo", "mysql", "neo4j", "odbc", "openfaas", "opsgenie", "oracle", "pagerduty", "papermill", "plexus", "postgres", "presto", "qubole", "redis", "salesforce", "samba", "segment", "sendgrid", "sftp", "singularity", "slack", "snowflake", "sqlite", "ssh", "tableau", "telegram", "trino", "vertica", "yandex", "zendesk"], version = "^2.1.2", optional = true}


[tool.poetry.scripts]
airfly = "airfly.cli.main:main"


[tool.poetry.extras]
# airflow = ["apache-airflow"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
